--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
             margin: 0;
             padding: 0;
             width: 100%;
-            height: 100%;
+            min-height: 100%; /* 从 height 改为 min-height，允许内容溢出屏幕时页面滚动 */
             background-color: #f0f2f5; /* 一个柔和的灰色背景，突出手册 */
             display: flex;
             justify-content: center;
-            align-items: center;
+            /* align-items: center; */ /* 移除了垂直居中，以解决顶部内容被裁切的问题 */
         }
 
         /* SVG 容器样式 */
